--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
     <script type="text/babel">
       const { useState } = React;
-      const { motion, useScroll, useTransform } = window.FramerMotion;
+      const { motion, useScroll, useTransform } = window.framerMotion;
+
 
       const Icon = ({path,className}) => (
         <svg className={className} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d={path}/></svg>
