--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
   <body class="bg-white">
     <div id="root"></div>
 
-    <script type="text/babel">
+   <script type="text/babel" data-presets="react">
+
       const { useState } = React;
       const { motion, useScroll, useTransform } = window.framerMotion;
+
 
 
       const Icon = ({path,className}) => (
