--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
     <!-- Framer Motion -->
-    <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
+    <script src="https://unpkg.com/framer-motion@11/dist/framer-motion.umd.js"></script>
+
 
     <!-- Babel для JSX -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
@@ -38,7 +39,7 @@
    <script type="text/babel" data-presets="react">
 
       const { useState } = React;
-      const { motion, useScroll, useTransform } = window.framerMotion;
+      const { motion, useScroll, useTransform } = window.Motion;
 
 
 
