--- a/index.html
+++ b/index.html
@@ -242,16 +242,17 @@
           return ()=> io.disconnect();
         },[]);
 
-        const products = [
-          { id:1, name:'Визитки',            image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Визитки', category:'Печать' },
-          { id:2, name:'Футболки',           image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Футболки', category:'Одежда' },
-          { id:3, name:'Чехлы для iPhone',   image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Чехлы',   category:'Аксессуары' },
-          { id:4, name:'Кружки',             image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Кружки',  category:'Посуда' },
-          { id:5, name:'Блокноты',           image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Блокноты',category:'Канцелярия' },
-          { id:6, name:'Стикерпаки',         image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Стикеры', category:'Мелочи' },
-          { id:7, name:'Значки',             image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=Значки',  category:'Мелочи' },
-          { id:8, name:'3D-печать',          image:'https://placehold.co/300x200/e0e7ff/4c1d95?text=3D',     category:'Специальное' }
-        ];
+    const products = [
+  { id:1, name:'Визитки',            image:'./assets/mockups/thumb-cards.jpg',    category:'Печать' },
+  { id:2, name:'Футболки',           image:'./assets/mockups/thumb-tshirt.jpg',   category:'Одежда' },
+  { id:3, name:'Чехлы для iPhone',   image:'./assets/mockups/thumb-case.jpg',     category:'Аксессуары' },
+  { id:4, name:'Кружки',             image:'./assets/mockups/thumb-mug.jpg',      category:'Посуда' },
+  { id:5, name:'Блокноты',           image:'./assets/mockups/thumb-notebook.jpg', category:'Канцелярия' },
+  { id:6, name:'Стикерпаки',         image:'./assets/mockups/thumb-stickers.jpg', category:'Мелочи' },
+  { id:7, name:'Значки',             image:'./assets/mockups/thumb-pins.jpg',     category:'Мелочи' },
+  { id:8, name:'3D-печать',          image:'./assets/mockups/thumb-3d.jpg',       category:'Специальное' },
+];
+
 
         const catalogItems = [
           { name:'Визитки', image:'https://placehold.co/400x300/f3e8ff/6d28d9?text=Визитки', variants:['90x50mm','85x55mm'], materials:['Матовая','Глянцевая'], price:'от 150₽' },
